# Freebricks

./: Cargo.toml  README.md
assets/shaders/: bricks.wgsl  debug_draw.wgsl
src/: lib.rs  main.rs
src/application/: application.rs
src/common/: asset_cache.rs  game.rs  mod.rs  model_builder.rs  model_graph.rs  state.rs
src/components/: bricks.rs  mod.rs  model.rs  physics.rs  render.rs
src/ecs/: bricks.rs  common.rs  mod.rs  model.rs  parts.rs  physics.rs  render.rs
src/physics/: deletion.rs  mod.rs  physics_state.rs  setup.rs  transform.rs
src/render/: bricks.rs  camera.rs  debug_draw.rs  mod.rs  queries.rs  render_state.rs  scene_tree.rs  texture.rs
src/utils/: graph.rs
tests/: bricks.rs  model.rs  test_utils.rs
