[package]
name = "freebricks"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
log = "0.4.27"
pollster = "0.4.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
wgpu = "26.0.1"
winit = "0.30.11"
bytemuck = { version = "1.16", features = [ "derive" ] }
glam = "0.30.4"
profiling = "1.0.17"
rand = "0.9.1"
bevy_ecs = "0.16.1"
rapier3d = { version = "0.26.1", features = [ "debug-render", "simd-stable", "parallel" ] }
bevy_derive = "0.16.1"
enumflags2 = "0.7.12"
petgraph = "0.8.2"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
